# NPS-generation

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.txt  environment.yml  pyproject.toml
.github/workflows/: build.yml  dev.yml
NPS-generation/: ,  augment-SMILES.py  calculate_outcomes.py  calculate_outcomes_distribution.py  clean-SMILES.py  functions.py  models.py  sample_molecules.py  tabulate_molecules.py  train_model.py
NPS_generation/: __init__.py  __main__.py  augment_SMILES.py  calculate_outcomes.py  calculate_outcomes_distribution.py  clean_SMILES.py  datasets.py  functions.py  models.py  sample_molecules.py  tabulate_molecules.py  train_model.py
NPS_generation/commands/: create_training_sets.py  inner_process_tabulated_molecules.py  inner_sample_molecules_RNN.py  inner_tabulate_molecules.py  inner_train_models_RNN.py  inner_write_formula_prior_CV.py  inner_write_structural_prior_CV.py  preprocess.py
NPS_generation/python/: datasets.py  functions.py  inner-collect-tabulated-molecules.py  inner-sample-molecules-RNN.py  inner-tabulate-molecules-break-SELFIES.py  inner-tabulate-molecules.py  inner-train-models-RNN.py  inner-write-formula-prior-CV.py  inner-write-structural-prior-CV.py  inner_calculate_outcomes.py  inner_collect_tabulated_molecules.py  inner_create_training_sets.py  inner_parse_valid_SELFIES.py  inner_parse_valid_SMILES.py  inner_preprocess_and_create_training_sets.py  inner_preprocess_prior_datasets.py  inner_process_tabulated_molecules.py  inner_sample_molecules_RNN.py  inner_sample_molecules_transformer.py  inner_tabulate_molecules.py  inner_tabulate_molecules_break_SELFIES.py  inner_train_models_RNN.py  inner_train_models_transformer.py  inner_write_formula_prior_CV.py  inner_write_outcome_distrs.py  inner_write_pairwise_Tc_distribution.py  inner_write_structural_prior_CV.py  loggers.py  models.py  preprocess_gdb13.py  preprocess_gdb13_sample.py
NPS_generation/util/: SmilesEnumerator.py
R/: theme.R
R/break-SELFIES/: inner-calculate-effect-sizes.R  (+11 more)
data/: chembl_28_2000.smi
python/: augment-SMILES.py  calculate_outcomes.py  clean-SMILES.py  datasets.py  functions.py  inner-calculate-outcomes.py  inner-collect-tabulated-molecules.py  inner-create-training-sets.py  inner-parse-valid-SELFIES.py  inner-parse-valid-SMILES.py  inner-preprocess-and-create-training-sets.py  inner-preprocess-prior-datasets.py  inner-process-tabulated-molecules.py  inner-sample-molecules-RNN.py  inner-tabulate-molecules.py  inner-train-models-RNN.py  inner-train-models-transformer.py  inner-write-formula-prior-CV.py  inner-write-outcome-distrs.py  inner-write-pairwise-Tc-distribution.py  inner-write-structural-prior-CV.py  models.py  preprocess-gdb13-sample.py  preprocess-gdb13.py  train_model.py
snakemake/: README.md  Snakefile  config.json  config_fast.json
tests/: test_nps_generation.py  test_snakemake.py
(+94 files in other folders)
