[project]
name = "NPS-generation"
version = "1.0.0"
authors = [
  {name="Michael Skinnider", email="skinnider@princeton.edu"}
]
description = "NPS-generation is a tool to train and evaluate deep generative models of novel psychoactive substances"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
    "deepsmiles",
    "numpy",
    "pandas",
    "rdkit",
    "scipy",
    "selfies",
    "torch",
    "tqdm"
]

[tool.setuptools.package-data]
"*" = ["data/*.smi"]

[tool.pytest.ini_options]
testpaths = []

[project.optional-dependencies]
dev = []
