[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "NPS-generation"
authors = [
  {name="Michael Skinnider", email="skinnider@princeton.edu"}
]
description = "NPS-generation is a tool to train and evaluate deep generative models of novel psychoactive substances"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]

dependencies = [
    "deepsmiles",
    "fcd_torch",
    "numpy",
    "pandas",
    "pulp<2.8.0",
    "rdkit",
    "scipy<1.12",
    "selfies",
    "snakemake",
    "torch",
    "tqdm"
]
dynamic = ["version"]

[project.scripts]
nps = "NPS_generation.__main__:main"

[tool.setuptools_scm]
write_to = "NPS_generation/_version.py"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "NPS_generation",
    "NPS_generation.util"
]

[tool.setuptools.package-data]
NPS_generation = ["data/*.smi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-sv"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest"
]
